--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation "org.testcontainers:nginx:1.19.4"
+    testImplementation 'org.testcontainers:junit-jupiter:1.15.1'
 }
 
 tasks.named('test') {
